Fixed spacing issues

--- a/src/styles/components/definition.scss
+++ b/src/styles/components/definition.scss
@@ -36,9 +36,11 @@
     font-size: 1.5rem;
     padding: 10px 0;
     font-weight: bold;
+    flex-basis: 100%;
   }
 
   p {
     font-size: 1.3rem;
+    flex-basis: 100%;
   }
 }
